fixed twenty million warnings and a few errors