@@ -1,5 +1,6 @@
 package mca.server.world.data;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -12,7 +13,6 @@ import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import mca.Config;
@@ -44,6 +44,7 @@ import static net.minecraft.tag.BlockTags.LEAVES;
 
 public class Building implements Serializable, Iterable<UUID> {
     public static final long SCAN_COOLDOWN = 4800;
+    @Serial
     private static final long serialVersionUID = -1106627083469687307L;
     private static final Direction[] directions = {
             Direction.UP, Direction.DOWN, Direction.NORTH, Direction.EAST, Direction.SOUTH, Direction.WEST
@@ -228,8 +229,7 @@ public class Building implements Serializable, Iterable<UUID> {
 
         //remove all invalid pois
         List<BlockPos> mask = pois.stream()
-                .filter(p -> !getBuildingType().getGroup(world.getBlockState(p).getBlock()).isPresent())
-                .collect(Collectors.toList());
+                .filter(p -> getBuildingType().getGroup(world.getBlockState(p).getBlock()).isEmpty()).toList();
         pois.removeAll(mask);
     }
 
@@ -260,7 +260,7 @@ public class Building implements Serializable, Iterable<UUID> {
         NO_DOOR,
         TOO_SMALL,
         IDENTICAL,
-        SUCCESS;
+        SUCCESS
     }
 
     public validationResult validateBuilding(World world, Set<BlockPos> blocked) {
